added browserify for JS organization

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,3 +13,7 @@ $brand-primary:         #72b341;
 
 $link-color:            $brand-primary;
 $link-hover-color:      darken($link-color, 15%);
+
+body {
+  background: red;
+}
