updated css structure to include standardized media queries and layout elements

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -31,3 +31,18 @@ $custom-font-name: 'project_name';
    content: "\e900";
  }
 */
+
+
+
+// Media Queries
+@media(max-width: $screen-md-max) {
+
+}
+
+@media(max-width: $screen-sm-max) {
+
+}
+
+@media(max-width: $screen-xs-max) {
+
+}
