--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -24,3 +24,17 @@ img.pull-left {
 img.pull-right {
   margin-left: 12px;
 }
+
+
+// Media Queries
+@media(max-width: $screen-md-max) {
+
+}
+
+@media(max-width: $screen-sm-max) {
+
+}
+
+@media(max-width: $screen-xs-max) {
+
+}
