--- a/scss/elements/_blockquotes.scss
+++ b/scss/elements/_blockquotes.scss
@@ -58,3 +58,17 @@ blockquote a{
 blockquote a:hover{
  color: $gray-darker;
 }
+
+
+// Media Queries
+@media(max-width: $screen-md-max) {
+
+}
+
+@media(max-width: $screen-sm-max) {
+
+}
+
+@media(max-width: $screen-xs-max) {
+
+}
