--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "utilities";
 @import "animations";
 @import "fonts";
+@import "global";
 
 // Import layout / global styles
 @import "layout/page_header";
@@ -15,4 +16,5 @@
 @import "elements/canvas";
 @import "elements/blockquotes";
 @import "elements/wufoo";
+@import "elements/buttons";
 
