--- a/scss/layout/_page_header.scss
+++ b/scss/layout/_page_header.scss
@@ -18,6 +18,10 @@
       font-weight: 400;
     }
   }
+  .dropdown-menu {
+    border-radius: 0;
+    width: 100%;
+  }
   .btn {
     padding-top: 7px;
     padding-bottom: 7px;
@@ -26,12 +30,38 @@
   }
 }
 
-#page-header {
+#page-header, #mobile-header {
+  position: relative;
+  box-shadow: 1px 2px 3px rgba(0,0,0,.1);
   .navbar {
     margin-bottom: 0;
   }
+  .nav {
+    li {
+      a {
+        font-family: $headings-font-family;
+        &:hover, &:active, &:focus {
+          background: transparent;
+          color: $teal;
+        }
+      }
+    }
+  }
+  .btn-lime {
+    color: #fff;
+    line-height: 1;
+    padding: 5px 20px;
+    text-transform: none;
+    font-family: $headings-font-family;
+    font-weight: 400;
+    span {
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+  }
 }
 
+// Desktop nav styles
 #mainnav {
   .container {
     position: relative;
@@ -45,16 +75,11 @@
     margin-left: 180px;
     li {
       a {
-        color: $gray-darker;
-        font-family: $headings-font-family;
         height: 67px;
         line-height: 67px;
         padding: 0 20px;
         font-size: 18px;
-        &:hover, &:active, &:focus {
-          background: transparent;
-          color: $teal;
-        }
+        color: $gray-darker;
       }
     }
   }
@@ -80,6 +105,72 @@
   float: right;
   margin-bottom: 0;
 }
+
+// Mobile nav styles
+
+#mobilenav {
+  margin-bottom: 0;
+  border: none;
+  .navbar-collapse {
+    padding: 0;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 3px inset;
+  }
+  .nav {
+    li {
+      border-bottom: 1px solid $gray-lighter;
+      a {
+        padding: 20px;
+        color: $gray-darker;
+        &.btn {
+          color: #fff;
+        }
+
+      }
+      button {
+        color: #fff;
+      }
+    }
+  }
+  
+  .navbar-brand {
+    width: 125px;
+    padding: 3px;
+    margin-left: 17px;
+  }
+  .navbar-toggle {
+    background-color: $lime;
+    margin: 0;
+    border-radius: 0;
+    border: none;
+    padding: 18px 14px;
+    .icon-bar {
+      background-color: #fff;
+    }
+  }
+  .top-btns {
+    clear: both;
+    display: flex;
+    padding: 0 10px;
+    .btn {
+      width: 50%;
+      padding: 10px;
+      float: left;
+      margin: 10px;
+      &:nth-of-type(2) {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        font-weight: 700;
+      }
+    }
+  }
+  .dropdown-menu {
+    position: relative;
+    float: none;
+    border-radius: 0;
+    border: none;
+  }
+}
+
 
 // Media Queries
 @media(max-width: $screen-md-max) {
