--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -5,6 +5,7 @@
   font-family: $headings-font-family;
   font-weight: 700;
   text-transform: uppercase;
+  color: #fff;
   &.btn-plum {
     background-color: $plum;
   }
