--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "animations";
 @import "fonts";
 @import "global";
+@import "home";
 
 // Import layout / global styles
 @import "layout/page_header";
@@ -17,4 +18,5 @@
 @import "elements/blockquotes";
 @import "elements/wufoo";
 @import "elements/buttons";
+@import "elements/video_card";
 
