--- a/scss/elements/_blockquotes.scss
+++ b/scss/elements/_blockquotes.scss
@@ -13,6 +13,13 @@ blockquote{
   em {
     z-index: 9;
   }
+  small {
+    display: block;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 19px;
+    font-style: normal;
+  }
 }
 
 blockquote::before{
