--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@
 // Import additional elements or project specific styles
 @import "elements/canvas";
 @import "elements/blockquotes";
-@import "elements/wufoo";
+@import "elements/forms";
 @import "elements/buttons";
 @import "elements/video_card";
 @import "elements/grid";
