--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import "fonts";
 @import "global";
 @import "home";
+@import "volunteer";
 
 // Import layout / global styles
 @import "layout/page_header";
