--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -19,3 +19,24 @@
     background-color: $teal;
   }
 }
+
+// TODO - Add these styles
+button {
+
+}
+.button {
+
+}
+
+// Media Queries
+@media(max-width: $screen-md-max) {
+
+}
+
+@media(max-width: $screen-sm-max) {
+
+}
+
+@media(max-width: $screen-xs-max) {
+
+}
