--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -54,3 +54,16 @@ textarea {
    color:    #000;
    font-family: 'Open Sans', helvetica, arial, sans-serif;
 }
+
+// Media Queries
+@media(max-width: $screen-md-max) {
+
+}
+
+@media(max-width: $screen-sm-max) {
+
+}
+
+@media(max-width: $screen-xs-max) {
+
+}
