--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -1,7 +1,11 @@
-.grid {
-  display: flex;
-  &.between {
-    justify-content: space-between;
+.home_view {
+
+}
+
+#volunteer {
+  .illustration {
+    top: auto;
+    bottom: 0;
   }
 }
 
