--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -54,3 +54,15 @@
   
 }
 
+// Media Queries
+@media(max-width: $screen-md-max) {
+
+}
+
+@media(max-width: $screen-sm-max) {
+
+}
+
+@media(max-width: $screen-xs-max) {
+
+}
