--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,10 @@
 @import "base/variables";
 @import "base/mixins";
 @import "base/utilities";
-@import "base/animations";
-@import "base/fonts";
 @import "base/global";
+@import "base/typography";
+@import "base/fonts";
+@import "base/animations";
 
 // Import layout / global styles
 @import "layout/page_header";
