--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,11 +1,12 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: $headings-font-family;
   color: $brand-primary;
+  font-weight: 400;
 }
 
-h1, .h1 { font-size: 45px; }
+h1, .h1 { font-size: 45px; margin-bottom: 20px; }
 h2, .h2 { font-size: 25px; }
-h3, .h3 { font-size: 21px; }
+h3, .h3 { font-size: 21px; font-weight: 700; }
 h4, .h4 { font-size: 18px; }
 
 em {
@@ -13,7 +14,8 @@ em {
 }
 
 .lead {
-  
+  font-family: $headings-font-family;
+  font-size: 26px;
 }
 
 
