--- a/scss/views/_platform.scss
+++ b/scss/views/_platform.scss
@@ -2,6 +2,12 @@
   
 }
 
+
+#subtitling-solutions {
+  .img-responsive {
+    margin: 20px auto;
+  }
+}
 // Media Queries
 @media(max-width: $screen-md-max) {
 
