--- a/scss/elements/_grid.scss
+++ b/scss/elements/_grid.scss
@@ -3,6 +3,20 @@
   &.between {
     justify-content: space-between;
   }
+  &.icons-grid {
+    align-items: center;
+    margin: 20px 0;
+    .item {
+      margin-right: 40px;
+      text-align: center;
+      img {
+        margin-bottom: 10px;
+      }
+      &:nth-of-type(3) {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
 // Media Queries
