--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -20,6 +20,26 @@
   }
 }
 
+// for internal pages with an intro section
+.intro {
+  h1 { 
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  h2 {
+    margin-top: 10px;
+  }
+  p {
+    margin-top: 35px;
+    margin-bottom: 30px;
+  }
+}
+
+// lists with bullets 
+ul.styled {
+  list-style-type: disc;
+  padding-left: 20px;
+}
 
 img.pull-left {
   margin-right: 12px;
