--- a/scss/elements/_grid.scss
+++ b/scss/elements/_grid.scss
@@ -8,13 +8,9 @@
     margin: 20px 0;
     .item {
       margin-right: 40px;
+      margin-bottom: 10px;
       text-align: center;
-      img {
-        margin-bottom: 10px;
-      }
-      &:nth-of-type(3) {
-        margin-right: 0;
-      }
+      width: 60px;
     }
   }
 }
