--- a/scss/views/_about.scss
+++ b/scss/views/_about.scss
@@ -2,9 +2,27 @@
   
 }
 
-#amara-community {
+#amara-community, #core-team {
   img {
     margin: 20px auto;
+  }
+}
+
+#core-team {
+  h3 {
+    margin-bottom: 0;
+  }
+  h4 {
+    margin-top: 5px;
+  }
+  p {
+    margin-bottom: 20px;
+  }
+}
+
+#awards {
+  img {
+    margin: 30px auto;
   }
 }
 
