homepage refinements, platform refinements

--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -11,7 +11,7 @@
   text-align: center;
   font-size: 19px;
   @include transition(0.4s);
-  &:hover {
+  &:hover, &:focus, &:visited {
     color: #fff;
   }
   &.button-plum {
