--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -2,6 +2,19 @@
 
 }
 
+#meet-amara {
+  .col-md-5 {
+    .content {
+      margin-top: 60px;
+    }
+  }
+  svg {
+    width: 500px;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 #volunteer {
   .illustration {
     top: auto;
