--- a/scss/layout/_page_content.scss
+++ b/scss/layout/_page_content.scss
@@ -1,5 +1,5 @@
 #page-content {
-
+  padding-top: 100px;
 }
 
 // Media Queries
@@ -12,5 +12,7 @@
 }
 
 @media(max-width: $screen-xs-max) {
-
+  #page-content {
+    padding-top: 50px;
+  }
 }
