--- a/scss/elements/_video_card.scss
+++ b/scss/elements/_video_card.scss
@@ -46,7 +46,7 @@
   bottom: 0;
   left: 0;
   padding: 60px 30px 10px 10px;
-  color: #ffffff;
+  color: #fff;
   background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.7));
 }
 .videoCard-title {
