--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -29,3 +29,8 @@ $headings-font-family:    'Raleway', sans-serif;
 $screen-md-max:           1199px;
 $screen-sm-max:           1023px;
 $screen-xs-max:           767px;
+
+$screen-xl-min:           1400px;
+$screen-lg-min:           1200px;
+$screen-md-min:           1024px;
+$screen-sm-min:           768px;
