--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -8,8 +8,10 @@ body {
 }
 
 section {
+  position: relative;
   padding: 50px 0;
   clear: both;
+  overflow: hidden;
 }
 
 a {
@@ -24,6 +26,13 @@ a {
 
 
 // Media Queries
+@media(min-width: $screen-xl-min) {
+  section {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+}
+
 @media(max-width: $screen-md-max) {
 
 }
