--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -20,19 +20,51 @@
   }
 }
 
-// for internal pages with an intro section
-.intro {
-  h1 { 
-    margin-top: 0;
+.break-50 {
+  width: 50% !important;
+}
+.break-60 {
+  width: 60% !important;
+}
+.break-70 {
+  width: 70% !important;
+}
+.break-80 {
+  width: 80% !important;
+}
+.break-90 {
+  width: 90% !important;
+}
+
+// column wrap 
+.col2 {
+  column-count: 2;
+  column-gap: 40px;
+  li {
+    break-inside: avoid;
     margin-bottom: 0;
+    margin-top: 1em;
+    &:first-child {
+      margin-top: 0;
+    }
   }
-  h2 {
-    margin-top: 10px;
+}
+.col3 {
+  column-count: 3;
+  column-gap: 40px;
+  li {
+    break-inside: avoid;
+    margin-bottom: 0;
+    margin-top: 1em;
   }
-  p {
-    margin-top: 35px;
-    margin-bottom: 30px;
-  }
+}
+
+.italic {
+  font-style: italic;
+}
+
+.muted, .faded {
+  opacity: 0.5;
 }
 
 // lists with bullets 
@@ -50,53 +82,43 @@ img.pull-right {
 
 // Color utilities
 .bg-lime {
-  background-color: $lime;
-  &.gradient {
-    background-image: linear-gradient($teal, $lime);
-  }
+  @include palette($lime, #ffffff);
 }
 
 .bg-teal {
-  background-color: $teal;
-  &.gradient {
-    background-image: linear-gradient($lime, $teal);
-  }
+  @include palette($teal, #ffffff);
 }
 
 .bg-amaranth {
-  background-color: $amaranth;
-  &.gradient {
-    background-image: linear-gradient($plum, $amaranth);
-  }
+  @include palette($amaranth, #ffffff);
 }
 
 .bg-plum {
-  background-color: $plum;
-  &.gradient {
-    background-image: linear-gradient($amaranth, $plum);
-  }
+  @include palette($plum, #ffffff);
 }
 
 .bg-cream {
-  background-color: $cream;
+  @include palette($cream, $gray);
 }
 
 .bg-gray-lighter {
-  background-color: $gray-lighter;
+  @include palette($gray-lighter, $plum);
 }
 
 
 
 // Text Utilities
-.text-white {
-  color: #fff;
-  h1, h2, h3, h4, h5, h6, p, blockquote {
-    color: #fff;
-  }
-}
-.text-capitalize { text-transform: capitalize; }
-.text-lowercase { text-transform: lowercase; }
-.text-uppercase { text-transform: uppercase; }
+.text-white { color: #fff !important; }
+.text-plum { color: $plum !important; }
+.text-lime { color: $lime !important; }
+.text-teal { color: $teal !important; }
+.text-amaranth { color: $amaranth !important; }
+.text-cream { color: $cream !important; }
+
+.text-nocase { text-transform: none !important; }
+.text-capitalize { text-transform: capitalize !important; }
+.text-lowercase { text-transform: lowercase !important; }
+.text-uppercase { text-transform: uppercase !important; }
 
 
 // Patterns
@@ -104,51 +126,13 @@ img.pull-right {
 
 }
 
-.illustration-section {
-  position: relative;
-}
-
-.illustration {
-  position: absolute;
-  display: block;
-  max-width: 50%;
-  top: 0;
-  &.illustration-left {
-    left: 0;
-    right: auto;
-  }
-  &.illustration-right {
-    right: 0;
-    left: auto;
-  }
-}
-
-.caret {
-  border-right: 3px solid transparent;
-  border-left: 3px solid transparent;
-}
-
-.play-button {
-  position: relative;
-  padding: 25px 0 25px 50px;
-  display: block;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  &:hover {
-    i {
-      color: $amaranth;
-    }
-  }
-  i {
-    position: absolute;
-    top: 17px;
-    left: 0;
-    font-size: 40px;
-    color: $plum;
-  }
-}
-
 // Media Queries
+@media(min-width: $screen-xl-min) {
+  .container {
+    width: 1400px;
+  }
+}
+
 @media(max-width: $screen-md-max) {
 
 }
@@ -158,5 +142,20 @@ img.pull-right {
 }
 
 @media(max-width: $screen-xs-max) {
+  // breaks go to full width
+  .break-50,
+  .break-60,
+  .break-70,
+  .break-80,
+  .break-90, {
+    width: 100% !important;
+  }
 
+  // columns stop wrapping 
+  .col2 {
+    column-count: 1;
+  }
+  .col3 {
+    column-count: 1;
+  }
 }
