responsive for mainnav

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
 @import "elements/buttons";
 @import "elements/video_card";
 @import "elements/grid";
+@import "elements/login";
 
 // Views
 @import "views/home";
