added the spanish files for testing

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -32,7 +32,7 @@
     border-color: lighten($color, 10%) !important;
   }
   &.gradient {
-    background-image: linear-gradient($bg, lighten($bg, 20%));
+    background-image: linear-gradient(lighten($bg, 10%), $bg);
   }
 }
 
