Added spanish translations for homepage

--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -85,6 +85,7 @@
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
+  text-transform: capitalize;
   &:hover {
     i {
       color: $amaranth;
