Header edits, responsive edits

--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -38,6 +38,12 @@
       background-color: $lime;
     }
   }
+  &.button-gray {
+    background-color: $gray;
+    &:hover {
+      background-color: $plum;
+    }
+  }
   &.button-transparent {
     background-color: transparent;
     color: $teal;
