--- a/scss/layout/_page_header.scss
+++ b/scss/layout/_page_header.scss
@@ -2,22 +2,14 @@
   background: $gray-darker;
   text-transform: uppercase;
   @include transition(.5s);
-  .navbar-nav {
-    >li {
-      >a {
-        padding-top: 5px;
-        padding-bottom: 5px;
-      }
-    }
-  }
   .dropdown {
     .button {
       background-color: $cream;
       text-transform: uppercase;
       color: $text-color;
       font-weight: 400;
-      padding-top: 7px;
-      padding-bottom: 7px;
+      padding-top: 6px;
+      padding-bottom: 6px;
     }
   }
   .dropdown-menu {
@@ -25,11 +17,20 @@
     width: 100%;
   }
   .button {
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     color: #fff;
-    font-size: 12px;
+    font-size: 11px;
     margin-top: 0;
+  }
+}
+
+#appnav {
+  float: right;
+  margin-bottom: 0;
+  margin-top:0;
+  .button {
+    padding: 6px 20px;
   }
 }
 
@@ -111,18 +112,17 @@
     text-transform: none;
     font-family: $headings-font-family;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 17px;
+    @include transition(.4s);
     span {
+      display: block;
       text-transform: uppercase;
       font-weight: 700;
     }
   }
 }
 
-#appnav {
-  float: right;
-  margin-bottom: 0;
-}
+
 
 // Mobile nav styles
 
@@ -142,7 +142,7 @@
         font-weight: 400;
         &.button {
           color: #fff;
-          padding: 10px 0;
+          padding: 12px 20px;
         }
       }
       button {
@@ -154,7 +154,11 @@
 
   .button {
     margin-top: 0;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: left;
+    padding: 12px 20px;
+    color: #fff;
   }
   
   .navbar-brand {
@@ -181,6 +185,11 @@
       padding: 10px;
       float: left;
       margin: 10px;
+      padding: 10px 0;
+      text-align: center;
+      span {
+        display: block;
+      }
       &:nth-of-type(2) {
         padding-top: 15px;
         padding-bottom: 15px;
@@ -193,16 +202,45 @@
     float: none;
     border-radius: 0;
     border: none;
+    padding: 0;
   }
 }
 
 
 // Media Queries
 
+@media(max-width: 1400px) {
+  #page-header {
+    &.consolidate-header {
+      #mainnav {
+        #mainnav-cta {
+          top: 65px;
+          opacity: 0;
+          visibility: hidden;
+        }
+      }
+    }
+  }
+  #mainnav {
+    #mainnav-cta {
+      position: fixed;
+      top: 96px;
+      left: 0;
+      right: auto;
+      width: 100%;
+      z-index: 99;
+      span {
+        display: inline-block;
+        margin-left: 3px;
+      }
+    }
+  }
+}
+
 @media(max-width: $screen-md-max) {
   #mainnav {
     .navbar-nav {
-      margin-left: 25px;
+      margin-left: 60px;
       li {
         a {
           padding: 0 12px;
@@ -227,18 +265,12 @@
       }
     }
     .navbar-nav {
-      margin-left: 15px;
       li {
         a {
           padding: 0 10px;
           font-size: 15px;
         }
       }
-    }
-    #mainnav-cta {
-      font-size: 16px;
-      width: 157px;
-      right: 0;
     }
   }
   
