--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,9 @@
 @import "layout/page_content";
 @import "layout/page_footer";
 
+// External Libraries
+@import "libs/venobox";
+
 // Import additional elements or project specific styles
 @import "elements/illustrations";
 @import "elements/canvas";
