hide header message when no .has-message class present

--- a/scss/layout/_page_header.scss
+++ b/scss/layout/_page_header.scss
@@ -215,10 +215,17 @@
 #header-message {
   text-align: center;
   padding: 12px;
+  display: none;
   p {
     line-height: 1.4;
     font-size: 14px;
     margin-bottom: 0;
+  }
+}
+
+.has-message {
+  #header-message {
+    display: block;
   }
 }
 
