add logged in state for topnav

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $gray-light:             #f4f4f7; // Light Grey
 $gray-lighter:           #F3F4F6; // 
 
 $teal:                   #30957b;
-$amaranth:               #e61972;
+$amaranth:               #f3254d;
 $turquoise:              #3da285;
 $plum:                   #5a2747;
 $lime:                   #80bd3e;
