--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,7 @@
 @import "elements/video_card";
 @import "elements/grid";
 @import "elements/login";
+@import "elements/sitemap";
 
 // Views
 @import "views/home";
