--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -1,10 +1,3 @@
-label {
-  display: none;
-}
-ul {
-  list-style: none;
-  padding: 0;
-}
 input.text {
   display: block;
   height: 45px;
@@ -18,9 +11,7 @@ input.text {
   background-color: #fff;
   background-image: none;
   border-radius: 0;
-  -webkit-box-shadow: none;
   box-shadow: none;
-  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   border: none;
 }
@@ -36,6 +27,9 @@ textarea {
   border: none;
   margin-top: 30px;
 }
+
+
+// Placeholders
 ::-webkit-input-placeholder { /* WebKit browsers */
   color: #000;
   font-family: 'Open Sans', helvetica, arial, sans-serif;
